[tool.poetry]
name = "conversor-moedas-fastapi"
version = "0.1.0"
description = ""
authors = ["whoisjose569 <jose.vitor.araujo569@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
requests = "^2.31.0"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
